fix: Fix issue with special chars not being properly written in report files